@@ -183,6 +183,11 @@ struct SK_API GrContextOptions {
     bool fDisableDriverCorrectnessWorkarounds = false;
 
     /**
+     * Maximum number of GPU programs or pipelines to keep active in the runtime cache.
+     */
+    int fRuntimeProgramCacheSize = 256;
+
+    /**
      * Cache in which to store compiled shader binaries between runs.
      */
     PersistentCache* fPersistentCache = nullptr;
